      results of folds without errors are used and a \code{warning} is
      issued.
      \item \code{bbs} and \code{bmono} no longer allow data outside of
      the \code{boundary.knots} during model fitting.
      \item Predictions for \code{bbs} and \code{bmono} now use linear
      extrapolation (user request inspired by
      \code{mgcv::Predict.matrix.pspline.smooth}).
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item Added new option \code{options(mboost_check_df2lambda =
	TRUE)}, which controlls if a stability check in \code{df2lambda}
      is performed. If set to \code{FALSE} this might speed up the
      computation of \code{df2lambda} especially with large design
      matrices.
      \item Stopped computing the singular vectors in \code{df2lambda}
      as the singular values are sufficient and as
      \dQuote{computing the singular vectors is the slow part for large
	matrices} (proposed by Fabian Scheipl).
    }
  }
  \subsection{Bug-fixes}{
    \itemize{
      \item \code{PropOdds()}: fixed bug if \code{offset} was specified
      (spotted by Madlene Nussbaum).
      \item Bug in \code{plot.mboost()} fixed which occured if a factor
      with equal effect estimates for different categories was plotted.
      \item Bug in \code{df2lambda} fixed: Make sure that \code{A} is
      symmetric if it is \code{Matrix}-object (spotted by Souhaib Ben
      Taieb).
      \item Bug in \code{df2lambda} fixed. Design matrices were always
      assumed to be of full rank.
    }
  }
}

\section{Changes in mboost version 2.4-2 (2014-02-12)}{
  \subsection{User-visible changes}{
    \itemize{
      \item Export \code{df2lambda}, \code{hyper_bbs} and \code{bl_lin}
        to make package \pkg{FDboost} happy. Note: These functions
	usually should not be called directly by users.
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item Added Hothorn et al (2010) to \file{inst/CITATION}
    }
  }
  \subsection{Bug-fixes}{
    \itemize{